# MeepSAT

./: .gitignore  .readthedocs.yaml  GIT_WORKFLOW.md  README.md  pyproject.toml  setup.py
doc/: README  README.md
examples/: 01_simple_single_lens_ARC.ipynb  01_simple_single_lens_ARC_N2FAR.ipynb  02_SPIDER2.ipynb  02_simple_single_lens_AddedComplexities_TFWD_b.ipynb  02_simple_single_lens_AddedComplexities_TFWD_b_nobaffles.ipynb  02_simple_single_lens_AddedComplexities_TFWD_b_noflairs.ipynb  02_simple_single_lens_AddedComplexities_TFWD_b_noflairs_edgepix.ipynb  02_simple_single_lens_AddedComplexities_TFWD_b_withflairs.ipynb  02_simple_single_lens_AddedComplexities_TFWDxTRV_b copy.ipynb  02_simple_single_lens_AddedComplexities_TFWDxTRV_b.ipynb  02_simple_single_lens_AddedComplexities_TRV_a.ipynb  02_simple_single_lens_AddedComplexities_TRV_b.ipynb  02_simple_single_lens_AddedComplexities_TRV_b_nobaffles.ipynb  02_simple_single_lens_AddedComplexities_TRV_b_noflairs.ipynb  02_simple_single_lens_AddedComplexities_TRV_b_withflairs.ipynb  03_SPIDER2.ipynb  04_3lens_system.ipynb  04_3lens_system_ARC.ipynb  04_3lens_system_noARC.ipynb  README.md  simple_single_lens_ARC.ipynb  spider2.ipynb
manuscript/: README
meepsat/: # Code Citations.md  analyse.py  analysis.py  components_2D_eps.py  components_2D_meep.py  extra_functions.py  field_analysis.py  json_to_script.py  meep_geometry.py  meep_optics.py  meep_visualization_meepsat_ver.py  meepulator.py  mp_sim_run.py  old_utilities.py  overall_prog_structure.txt  permittivity_components.py  plot.py  (+5 more)
meepsat.egg-info/: PKG-INFO
(+59 files in other folders)
